change width from absolute to percentage to avoid display-overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,6 @@
 .content{
     margin: 0 auto;
-    width: 1000px;
+    max-width: 1000px;
+    width: 100%;
     color: #b571d4;
 }
